# dqimeter

./: README.md  pyproject.toml  test_dqimeter.py
dqimeter/: __init__.py  assessor.py
dqimeter/resources/: DQI_efficientnet_b0.onnx
